Added A1 method.